# inference-optimization-study

./: .env.example  .gitignore  DEMO_GUIDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
notebooks/: inference_optimization_study.ipynb
results/: batch_throughput.csv  benchmark_results.csv  cost_analysis.csv  latency_data.json
scripts/: export_evidence.py
src/: __init__.py  baseline.py  batch_queue.py  benchmark.py  onnx_export.py  quantize.py
tests/: conftest.py  test_baseline.py  test_batch_queue.py  test_benchmark.py  test_onnx_export.py  test_quantize.py
