[project]
name = "inference-optimization-study"
version = "0.1.0"
description = "Production inference optimization benchmarks for sentence-transformers (all-MiniLM-L6-v2)"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "sentence-transformers>=2.2",
    "onnx>=1.14",
    "onnxruntime>=1.16",
    "optimum[onnxruntime]>=1.13",
    "plotly>=5.18",
    "numpy>=1.24",
    "pandas>=2.0",
    "psutil>=5.9",
    "tqdm>=4.65",
    "ipykernel>=6.25",
]

[project.optional-dependencies]
gpu = ["onnxruntime-gpu>=1.16"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends._legacy:_Backend"
